using UnityEngine;

[RequireComponent(typeof(Rigidbody2D))]
public class SkeletonController : MonoBehaviour
{
    [Header("Item Drop")]
    public GameObject healthPotionPrefab;
    public GameObject manaPotionPrefab;
    public GameObject coinPrefab;
    [Range(0f, 1f)] public float healthPotionDropRate = 0.2f;
    [Range(0f, 1f)] public float manaPotionDropRate = 0.15f;
    [Range(0f, 1f)] public float coinDropRate = 0.5f;
    public int coinDropMin = 1;
    public int coinDropMax = 5;

    [Header("Ground Check")]
    [Tooltip("V·ªã tr√≠ ch√¢n ƒë·ªÉ ki·ªÉm tra ground. N·∫øu null s·∫Ω d√πng offset.")]
    public Transform footPoint;
    public float groundCheckOffsetY = -0.5f;

    [Header("Stats")]
    public float moveSpeed = 2.5f;
    public float chaseRange = 6f;
    public float attackRange = 0.8f;
    public float attackCooldown = 1.2f;
    public int maxHealth = 5;
    public int damage = 2;
    public float stopDistance = 0.2f;

    [Header("References")]
    public Transform player;
    public Transform attackPoint;
    [Tooltip("Layer c·ªßa player ƒë·ªÉ attack")]
    public LayerMask playerLayer;
    [Tooltip("Layer c·ªßa ground ƒë·ªÉ ki·ªÉm tra ƒë·ª©ng tr√™n m·∫∑t ƒë·∫•t")]
    public LayerMask groundLayer;

    [Header("Ground Check")]
    [Tooltip("V·ªã tr√≠ ch√¢n ƒë·ªÉ ki·ªÉm tra ground. N·∫øu null s·∫Ω d√πng offset.")]

    private Rigidbody2D rb;
    private Animator anim;
    private SpriteRenderer sprite;
    private float lastAttackTime;
    private int currentHealth;
    private bool isDead = false;
    private Damageable damageable;

    enum State { Idle, Chasing, Attacking, Hurt, Dead }
    State currentState = State.Idle;

    void Awake()
    {
        rb = GetComponent<Rigidbody2D>();
        anim = GetComponent<Animator>();
        sprite = GetComponent<SpriteRenderer>();
        currentHealth = maxHealth;
        damageable = GetComponent<Damageable>();
    }

    void Update()
    {
        if (damageable != null && damageable.IsStunned) return;
        if (isDead || player == null) return;

        float dist = Mathf.Abs(player.position.x - transform.position.x);
        float verticalDist = Mathf.Abs(player.position.y - transform.position.y);

        // Flip sprite theo h∆∞·ªõng player
        // Flip sprite ƒë√∫ng h∆∞·ªõng (m·∫∑c ƒë·ªãnh quay ph·∫£i)
        sprite.flipX = player.position.x < transform.position.x;

        // ƒê·∫£m b·∫£o attackPoint lu√¥n n·∫±m ph√≠a tr∆∞·ªõc m·∫∑t enemy
        if (attackPoint != null)
        {
            Vector3 ap = attackPoint.localPosition;
            float absX = Mathf.Abs(ap.x);
            ap.x = sprite.flipX ? -absX : absX;
            attackPoint.localPosition = ap;
        }

        // Ki·ªÉm tra c√≥ ƒëang ƒë·ª©ng tr√™n m·∫∑t ƒë·∫•t kh√¥ng
        Vector2 groundCheckPos = footPoint != null ? (Vector2)footPoint.position : (Vector2)transform.position + Vector2.up * groundCheckOffsetY;
        RaycastHit2D groundHit = Physics2D.Raycast(groundCheckPos, Vector2.down, 0.2f, groundLayer);
        bool isGrounded = groundHit.collider != null;
        anim.SetBool("isGrounded", isGrounded);

        switch (currentState)
        {
            case State.Idle:
                rb.velocity = Vector2.zero;
                // Ch·ªâ chase n·∫øu player c√πng t·∫ßng (verticalDist nh·ªè)
                if (dist < chaseRange && verticalDist < 1.5f)
                {
                    currentState = State.Chasing;
                }
                break;

            case State.Chasing:
                if (dist > chaseRange || verticalDist > 1.5f)
                {
                    currentState = State.Idle;
                    rb.velocity = Vector2.zero;
                }
                else if (dist <= attackRange && Time.time >= lastAttackTime + attackCooldown)
                {
                    currentState = State.Attacking;
                    rb.velocity = Vector2.zero;

                    // Random attack
                    int rand = Random.Range(0, 2);
                    string attackTrigger = (rand == 0) ? "Attack1" : "Attack2";
                    anim.SetTrigger(attackTrigger);

                    lastAttackTime = Time.time;
                }
                else if (dist > attackRange + stopDistance)
                {
                    // Ch·ªâ di chuy·ªÉn ngang tr√™n m·∫∑t ƒë·∫•t
                    if (isGrounded)
                    {
                        float dirX = Mathf.Sign(player.position.x - transform.position.x);
                        rb.velocity = new Vector2(dirX * moveSpeed, rb.velocity.y);
                        anim.SetBool("isWalking", true);
                    }
                    else
                    {
                        rb.velocity = new Vector2(0, rb.velocity.y);
                        anim.SetBool("isWalking", false);
                    }
                }
                else
                {
                    rb.velocity = Vector2.zero;
                    anim.SetBool("isWalking", false);
                }
                break;

            case State.Attacking:
                rb.velocity = Vector2.zero;
                anim.SetBool("isWalking", false);
                break;

            case State.Hurt:
                rb.velocity = Vector2.zero;
                anim.SetBool("isWalking", false);
                break;

            case State.Dead:
                rb.velocity = Vector2.zero;
                anim.SetBool("isWalking", false);
                break;
        }
    }

    public void TakeDamage(int dmg)
    {
        if (isDead) return;

        currentHealth -= dmg;

        if (currentHealth <= 0)
        {
            Die();
        }
        else
        {
            currentState = State.Hurt;
            anim.SetTrigger("Hurt");
        }
    }

    void Die()
    {
        // Drop items
        TryDropItems();
        isDead = true;
        currentState = State.Dead;
        anim.SetTrigger("Die");
        rb.velocity = Vector2.zero;

        // Award experience to player
        var experienceSystem = FindObjectOfType<ExperienceSystem>();
        if (experienceSystem != null)
        {
            Debug.Log($"[SkeletonController] G·ªçi GainExpFromEnemy v·ªõi type: 'skeleton'");
            experienceSystem.GainExpFromEnemy("skeleton");
            Debug.Log("üíÄ Skeleton defeated ‚Üí +75 EXP awarded to player");
        }
        else
        {
            Debug.LogWarning("‚ö†Ô∏è ExperienceSystem not found - no EXP awarded");
        }

        Destroy(gameObject, 1.5f);
    }

    public void TryDropItems()
    {
        Debug.Log($"[ItemDrop] TryDropItems called. Prefabs: HP={healthPotionPrefab}, MP={manaPotionPrefab}, Coin={coinPrefab}. Rates: HP={healthPotionDropRate}, MP={manaPotionDropRate}, Coin={coinDropRate}");
        // Health Potion
        if (healthPotionPrefab != null && Random.value < healthPotionDropRate)
        {
            Vector3 offset = new Vector3(Random.Range(-0.5f, 0.5f), 0.2f, 0f);
            Vector3 dropPos = transform.position + offset;
            var obj = Instantiate(healthPotionPrefab, dropPos, Quaternion.identity);
            var rb = obj.GetComponent<Rigidbody2D>();
            if (rb != null) rb.gravityScale = 1.5f;
            Debug.Log($"[ItemDrop] Spawned HealthPotion at {dropPos}");
        }
        // Mana Potion
        if (manaPotionPrefab != null && Random.value < manaPotionDropRate)
        {
            Vector3 offset = new Vector3(Random.Range(-0.5f, 0.5f), 0.2f, 0f);
            Vector3 dropPos = transform.position + offset;
            var obj = Instantiate(manaPotionPrefab, dropPos, Quaternion.identity);
            var rb = obj.GetComponent<Rigidbody2D>();
            if (rb != null) rb.gravityScale = 1.5f;
            Debug.Log($"[ItemDrop] Spawned ManaPotion at {dropPos}");
        }
        // Coin
        if (coinPrefab != null && Random.value < coinDropRate)
        {
            Vector3 offset = new Vector3(Random.Range(-0.5f, 0.5f), 0.2f, 0f);
            Vector3 dropPos = transform.position + offset;
            int coinAmount = Random.Range(coinDropMin, coinDropMax + 1);
            var coinObj = Instantiate(coinPrefab, dropPos, Quaternion.identity);
            var coin = coinObj.GetComponent<Coin>();
            if (coin != null) coin.amount = coinAmount;
            var rb = coinObj.GetComponent<Rigidbody2D>();
            if (rb != null) rb.gravityScale = 1.5f;
            Debug.Log($"[ItemDrop] Spawned Coin x{coinAmount} at {dropPos}");
        }
    }

    // Animation Event
    public void OnAttackHit()
    {
        if (player == null) return;

        Collider2D hit = Physics2D.OverlapCircle(attackPoint.position, 0.5f, playerLayer);
        if (hit != null)
        {
            Debug.Log($"ü¶¥ Skeleton hit detected: {hit.name} with damage {damage}");

            PlayerResources playerRes = hit.GetComponent<PlayerResources>();
            if (playerRes != null)
            {
                playerRes.TakeDamage(damage);
                Debug.Log($"‚úÖ Applied {damage} damage to PlayerResources");
                return;
            }

            Damageable dmg = hit.GetComponent<Damageable>();
            if (dmg != null)
            {
                Vector2 dir = ((Vector2)hit.transform.position - (Vector2)attackPoint.position).normalized;
                dmg.TakeHit(damage, dir, this.transform);
                Debug.Log($"‚úÖ Applied {damage} damage to Damageable");
                return;
            }

            Debug.LogWarning($"‚ùå No damage component found on {hit.name}!");
        }
        else
        {
            Debug.Log($"ü¶¥ Skeleton attack missed - no player in range. Layer: {playerLayer}, attackPoint: {attackPoint.position}");
        }
    }

    // Animation Event
    public void OnAttackEnd()
    {
        if (isDead) return;
        currentState = State.Chasing;
    }

    // Animation Event
    public void OnHurtEnd()
    {
        if (!isDead)
            currentState = State.Chasing;
    }

    void OnDrawGizmosSelected()
    {
        if (attackPoint != null)
        {
            Gizmos.color = Color.red;
            Gizmos.DrawWireSphere(attackPoint.position, 0.5f);
        }
        Gizmos.color = Color.yellow;
        Gizmos.DrawWireSphere(transform.position, chaseRange);
    }
}
